Fixed text so at not overflow over right

--- a/bundles/framework/publisher2/resources/scss/style.scss
+++ b/bundles/framework/publisher2/resources/scss/style.scss
@@ -121,6 +121,7 @@ div.basic_publisher {
     div.data {
         label {
             margin-right: 10px;
+            width: 300px;
         }
 
         input {
